--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 #start-button {
     padding: 20px 40px;
-    font-size: 24px;
+    font-size: 3em;
     background-color: #ff69b4;
     color: white;
     border: none;
@@ -50,10 +50,11 @@ body {
     align-items: center;
     z-index: 2;
     position: relative;
+    font-size: 2em;
 }
 
 #img01 {
-    width: 150px;
+    width: 300px;
     border-radius: 50%;
     border: 6px solid #efb0c9;
 }
